logs/cron.log
Fri Feb 27 02:19:23 PM CST 2026: Running echo
/home/admin/.openclaw/workspace/scripts/cron_wrapper.sh: line 11: /home/admin/.openclaw/workspace/scripts/echo: No such file or directory
Sat Feb 28 02:00:01 AM CST 2026: Running /home/admin/.openclaw/workspace/scripts/memory_maintenance.sh
[Sat Feb 28 02:00:01 AM CST 2026] Starting memory maintenance...
Updated memory index with 4 files
Author identity unknown

*** Please tell me who you are.

Run

  git config --global user.email "you@example.com"
  git config --global user.name "Your Name"

to set your account's default identity.
Omit --global to set the identity only in this repository.

fatal: unable to auto-detect email address (got 'admin@iZ0xiie15543ufmwh19e8lZ.(none)')
error: src refspec main does not match any
error: failed to push some refs to 'origin'
[Sat Feb 28 02:00:01 AM CST 2026] Memory maintenance completed!
Sat Feb 28 09:00:01 AM CST 2026: Running /home/admin/.openclaw/workspace/scripts/ai_agent_daily.sh
/usr/bin/python3: No module named searxng.__main__; 'searxng' is a package and cannot be directly executed
/home/admin/.openclaw/workspace/scripts/ai_agent_daily.sh: line 9: memory/$(date +%Y-%m-%d).md: No such file or directory
Sat Feb 28 02:00:02 PM CST 2026: Running /home/admin/.openclaw/workspace/scripts/shenzhen_intern.sh
/usr/bin/python3: No module named searxng.search
深圳实习岗位信息已准备完成
Sun Mar  1 02:00:01 AM CST 2026: Running /home/admin/.openclaw/workspace/scripts/memory_maintenance.sh
[Sun Mar  1 02:00:01 AM CST 2026] Starting memory maintenance...
Updated memory index with 5 files
Author identity unknown

*** Please tell me who you are.

Run

  git config --global user.email "you@example.com"
  git config --global user.name "Your Name"

to set your account's default identity.
Omit --global to set the identity only in this repository.

fatal: unable to auto-detect email address (got 'admin@iZ0xiie15543ufmwh19e8lZ.(none)')
error: src refspec main does not match any
error: failed to push some refs to 'origin'
[Sun Mar  1 02:00:01 AM CST 2026] Memory maintenance completed!
Sun Mar  1 09:00:01 AM CST 2026: Running /home/admin/.openclaw/workspace/scripts/ai_agent_daily.sh
Sun Mar  1 09:00:01 AM CST 2026: Running /home/admin/.openclaw/workspace/scripts/minecraft_mods.sh
/usr/bin/python3: No module named searxng.__main__; 'searxng' is a package and cannot be directly executed
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
Traceback (most recent call last):
  File "<string>", line 7, in <module>
  File "/usr/lib64/python3.6/json/__init__.py", line 299, in load
    parse_constant=parse_constant, object_pairs_hook=object_pairs_hook, **kw)
  File "/usr/lib64/python3.6/json/__init__.py", line 354, in loads
    return _default_decoder.decode(s)
  File "/usr/lib64/python3.6/json/decoder.py", line 339, in decode
    obj, end = self.raw_decode(s, idx=_w(s, 0).end())
  File "/usr/lib64/python3.6/json/decoder.py", line 357, in raw_decode
    raise JSONDecodeError("Expecting value", s, err.value) from None
json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)
/home/admin/.openclaw/workspace/scripts/ai_agent_daily.sh: line 92: /scripts/message_sender.sh: No such file or directory
Sun Mar  1 02:00:01 PM CST 2026: Running /home/admin/.openclaw/workspace/scripts/shenzhen_intern.sh
正在搜索深圳实习岗位信息...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "/usr/lib64/python3.6/json/__init__.py", line 299, in load
    parse_constant=parse_constant, object_pairs_hook=object_pairs_hook, **kw)
  File "/usr/lib64/python3.6/json/__init__.py", line 354, in loads
    return _default_decoder.decode(s)
  File "/usr/lib64/python3.6/json/decoder.py", line 339, in decode
    obj, end = self.raw_decode(s, idx=_w(s, 0).end())
  File "/usr/lib64/python3.6/json/decoder.py", line 357, in raw_decode
    raise JSONDecodeError("Expecting value", s, err.value) from None
json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)
Message queued for delivery: 深圳实习岗位日报
深圳实习岗位信息已成功推送！
Mon Mar  2 02:00:01 AM CST 2026: Running /home/admin/.openclaw/workspace/scripts/memory_maintenance.sh
[Mon Mar  2 02:00:01 AM CST 2026] Starting memory maintenance...
Updated memory index with 8 files
